# fastapi-template

./: .gitattributes  LICENSE  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
app/: main.py  models.py
app/api/: deps.py
app/api/routes/: items.py  login.py
app/core/: config.py  db.py  security.py
app/schemas/: __init__.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.py  start.bat  start.ps1  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260711_0001_core_auth.py
backend/app/: __init__.py  admin.py  initial_data.py  main.py  models.py  utils.py
backend/app/api/: __init__.py  deps.py  main.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: __init__.py  config.py  db.py  email.py  exceptions.py  logging.py  security.py  unit_of_work.py
backend/app/core/templates/: reset_password.html  welcome.html
backend/app/middleware/: __init__.py  request_context.py
backend/app/models/: __init__.py  base.py  refresh_session.py  user.py
backend/app/schemas/: __init__.py  common.py  token.py  user.py
backend/app/services/: auth.py  user.py
backend/scripts/: entrypoint.sh  export_openapi.py
backend/tests/: conftest.py  test_exceptions.py  test_system.py  test_users.py
docs/: authentication.md  configuration.md  deployment.md  security.md
frontend/: .gitignore  .prettierignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: normalize-generated-comments.mjs
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  errors.test.ts  errors.ts  schema.d.ts
frontend/src/app/: providers.tsx  query-client.ts  router.tsx
frontend/src/auth/: auth-context.ts  auth-provider.tsx  protected-route.tsx  token-store.ts  use-auth.ts
frontend/src/config/: env.ts
frontend/src/layouts/: root-layout.tsx
frontend/src/test/: server.ts  setup.ts
scripts/: backend-python.mjs
(+7 files in other folders)
