[project]
name = "fastapi-template"
version = "1.0.0"
description = "FastAPI application template backend"
readme = "README.md"
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiomysql>=0.3.2,<1",
    "alembic>=1.18.5,<2",
    "email-validator>=2.3.0,<3",
    "fastapi>=0.139.2,<1",
    "loguru>=0.7.3,<1",
    "mysqlclient>=2.2.8,<3",
    "pwdlib[argon2]>=0.3.0,<1",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.2,<3",
    "pyjwt>=2.13.0,<3",
    "python-multipart>=0.0.32,<1",
    "sqlalchemy>=2.0.51,<2.1",
    "uvicorn>=0.51.0,<1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1,<1",
    "httpx2>=2.7.0,<3",
    "mypy>=2.3,<3",
    "pip-audit>=2.10.1,<3",
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "ruff>=0.15.22,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["ASYNC", "B", "C4", "I", "PERF", "SIM", "UP"]

[tool.ruff.lint.isort]
known-third-party = ["alembic"]

[tool.mypy]
strict = true
files = ["app"]
